--- a/code/index.html
+++ b/code/index.html
@@ -7,6 +7,8 @@
 	<script src="Boot.js"></script>
 	<script src="Preloader.js"></script>
 	<script src="MainMenu.js"></script>
+	<script src="CircularEntity.js"></script>
+	<script src="Bacteria.js"></script>
 	<script src="Game.js"></script>
 </head>
 <body>
