--- a/code/index.html
+++ b/code/index.html
@@ -1,4 +1,7 @@
 <!DOCTYPE HTML>
+<META HTTP-EQUIV="CACHE-CONTROL" CONTENT="NO-CACHE">
+<META HTTP-EQUIV="EXPIRES" CONTENT="Mon, 22 Jul 2002 11:12:01 GMT">
+
 <html>
 <head>
 	<meta charset="UTF-8" />
