--- a/code/index.html
+++ b/code/index.html
@@ -13,6 +13,7 @@
 	<script src="CircularEntity.js"></script>
 	<script src="Bacteria.js"></script>
 	<script src="Macrophage.js"></script>
+	<script src="Receptor.js"></script>
 	<script src="Emitter.js"></script>
 	<script src="Game.js"></script>
 </head>
