--- a/code/index.html
+++ b/code/index.html
@@ -16,6 +16,10 @@
 	<script src="Receptor.js"></script>
 	<script src="Emitter.js"></script>
 	<script src="Game.js"></script>
+	<script src="Dialog.js"></script>
+	<script src="DecisionDialog.js"></script>
+	<script src="GameOverDialog.js"></script>
+	<script src="StartDialog.js"></script>
 </head>
 <body>
 
